@@ -127,9 +127,8 @@ public:
     void                  edisp(GCTAEdisp* edisp);
     const GCTABackground* background(void) const;
     void                  background(GCTABackground* background);
-
-    double               lo_save_thres(void) const;
-    double               hi_save_thres(void) const;
+    const double&         lo_save_thres(void) const;
+    const double&         hi_save_thres(void) const;
 
     // Low-level response methods
     double aeff(const double& theta,
@@ -180,10 +179,8 @@ private:
     GCTAEdisp*      m_edisp;          //!< Energy dispersion
     GCTABackground* m_background;     //!< Energy dispersion
     mutable bool    m_apply_edisp;    //!< Apply energy dispersion
-
-    // Energy thresholds
-    double             m_lo_save_thres;//!< save energy threshold
-    double             m_hi_save_thres;//!< save maximum energy
+    double          m_lo_save_thres;  //!< Save low energy threshold
+    double          m_hi_save_thres;  //!< Save high energy threshold
 
     // XML response filename
     std::string     m_xml_caldb;      //!< Calibration database string in XML file
@@ -408,10 +405,10 @@ void GCTAResponseIrf::background(GCTABackground* background)
 /***********************************************************************//**
  * @brief Return low energy threshold from IRF
  *
- * @return return low energy threshold
+ * @return Low energy threshold from IRF.
  ***************************************************************************/
 inline
-double GCTAResponseIrf::lo_save_thres(void) const
+const double& GCTAResponseIrf::lo_save_thres(void) const
 {
     return m_lo_save_thres;
 }
@@ -419,14 +416,12 @@ double GCTAResponseIrf::lo_save_thres(void) const
 /***********************************************************************//**
  * @brief Return high energy threshold from IRF
  *
- * @return return low energy threshold
+ * @return High energy threshold from IRF.
  ***************************************************************************/
 inline
-double GCTAResponseIrf::hi_save_thres(void) const
+const double& GCTAResponseIrf::hi_save_thres(void) const
 {
     return m_hi_save_thres;
 }
-
-
 
 #endif /* GCTARESPONSEIRF_HPP */
